# Whycron

./: .env.example  .gitattributes  .gitignore  Dockerfile  PRIVACY.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: publish-node-sdk.yml  publish-python-sdk.yml  sdk-ci.yml
apps/api/: config.py  db.py  main.py  redis_client.py  uuid7.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260510_1836_2d8cce1f09b0_initial_schema.py  20260516_1758_43104b8e5d92_add_processed_polar_events.py  20260518_0853_76fc65026c43_phase_13_slack_installations.py  20260518_1251_f0bea223e886_phase_14_public_status_pages.py  20260518_1747_9c94c8ca7e64_phase_16_terms_acceptance_fields.py  20260519_0701_278a4959d4c5_phase_18a_structured_patch_fields.py
apps/api/models/: __init__.py  _mixins.py  api_key.py  audit.py  billing.py  monitor.py  notification.py  run.py  slack.py  tenancy.py
apps/api/routes/: account.py  api_keys.py  auth.py  billing.py  channels.py  integrations.py  monitors.py  ping.py  runs.py  status.py  status_admin.py
apps/api/schemas/: __init__.py  account.py  api_key.py  billing.py  channel.py  monitor.py  run.py  status_page.py
apps/api/services/: ai_explainer.py  ai_validator.py  analytics.py  api_keys.py  auth.py  billing.py  crypto.py  queue.py  ratelimit.py  redactor.py  signature.py  status_page.py  tier_limits.py
apps/api/services/notify/: discord.py  dispatcher.py  email.py  format.py  slack.py  ssrf.py  webhook.py
apps/api/tests/: conftest.py  test_account_api.py  test_ai_explainer.py  test_ai_validator.py  test_api_keys.py  test_auth_jwt.py  test_auth_live_supabase.py  test_auth_routes.py  test_billing_checkout.py  test_billing_signature.py  test_billing_webhook.py  test_channels_api.py  test_integrations_slack.py  test_models_roundtrip.py  test_monitors_api.py  test_notify_dispatcher.py  test_notify_format.py  test_notify_slack.py  test_ping.py  test_ratelimit.py  test_redactor.py  test_runs_api.py  test_scheduler.py  test_signature.py  test_smoke.py  test_ssrf.py  test_status_page.py  test_uuid7.py  test_webhook_signing.py
apps/sdks/node/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
apps/sdks/node/src/: client.ts  errors.ts  index.ts  types.ts  with-monitor.ts
apps/sdks/node/tests/: client.test.ts
apps/sdks/python/: .gitignore  README.md  pyproject.toml
apps/sdks/python/tests/: test_client.py
apps/sdks/python/whycron/: __init__.py  client.py  decorator.py  exceptions.py
apps/web/: .env.example  index.html  package-lock.json  package.json
apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
apps/web/src/auth/: AuthProvider.tsx  RequireAuth.tsx
apps/web/src/components/: AppShell.tsx  Button.tsx  CodeBlock.tsx  CronPreview.tsx  EmptyState.tsx  Eyebrow.tsx  LandingFooter.tsx  MetricCard.tsx  Sidebar.tsx  StatusBadge.tsx  SurfaceCard.tsx  SymbolIcon.tsx  TermsAcceptanceModal.tsx  Topbar.tsx
apps/web/src/legal/: PRIVACY.md  TERMS.md
apps/web/src/lib/: analytics.ts  api.ts  config.ts  format.ts  schedule.ts  supabase.ts  types.ts
apps/web/src/screens/: AccountScreen.tsx  ApiKeysScreen.tsx  AuthCallbackScreen.tsx  ChannelsScreen.tsx  CreateMonitorScreen.tsx  FailuresScreen.tsx  LandingScreen.tsx  LegalPage.tsx  LoginScreen.tsx  MonitorDetailScreen.tsx  MonitorsScreen.tsx  (+3 more)
apps/worker/: main.py  schedule_scanner.py
apps/worker/tasks/: analyze.py  notify.py
docs/eval/: failure-cases-v1.json
docs/prompts/: failure-explanation-v1.md  failure-explanation-v2.md
scripts/: migrate.py  polar_smoke.py  posthog_smoke.py  run_eval.py  sentry_smoke.py  slack_debug.py
selfhost/: .env.example  Dockerfile.api  Dockerfile.web  Dockerfile.worker  README.md  docker-compose.yml  entrypoint-api.sh  entrypoint-worker.sh  nginx.conf
(+2 files in other folders)
